feat: ajout creature rnd chaque tour + quelques fix